--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,10 +25,10 @@ jobs:
       - save_cache:
           key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
           paths:
-            - "venv"
+            - "conda"
       - run:
           command: |
-            . venv/bin/activate
+            . conda/bin/activate
             python -m pytest -v tests/test_script.py
       - store_artifacts:
           path: test-reports/
